--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
     <TextView
         android:padding="10dp"
         android:id="@+id/empty"
-        android:text="No Event"
+        android:text="No Recording"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="30dp"/>
